update keepassxc config

--- a/roles/keepassxc/templates/keepassxc.ini.j2
+++ b/roles/keepassxc/templates/keepassxc.ini.j2
@@ -36,3 +36,7 @@ MinimizeToTray=false
 SearchViewState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\f\xf8\xf\0\0\0\t\0\0\0\x4\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\n\0\0\0\x18\0\0\0\v\0\0\0\0\0\0\0\b\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\x3\x2\0\0\0\f\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\0\0\0\x18\0\0\0\x81\0\0\0\0\0\0\0\f\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1)\0\0\0\x1\0\0\0\0\0\0\x1u\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1)
 ShowTrayIcon=false
 SplitterState=181, 685
+
+
+[security]
+clearclipboardtimeout=5
