reorganize utility role and update settings in shutter

--- a/roles/shutter/templates/settings.xml.j2
+++ b/roles/shutter/templates/settings.xml.j2
@@ -22,10 +22,10 @@
     cursor=""
     delay="0"
     delete_on_close=""
-    filename="$RRRRR"
+    filename="%y%m%d%NN"
     filetype="1"
     fname_autocopy=""
-    folder="{{ user_home }}/Desktop"
+    folder="{{ user_home }}/Pictures"
     im_colors_active=""
     im_colors="2"
     image_autocopy=""
