--- a/service/utility/templates/startup.j2
+++ b/service/utility/templates/startup.j2
@@ -1,7 +1,7 @@
 {# https://wiki.archlinux.org/index.php/desktop_entries #}
 [Desktop Entry]
 Comment={{ item.name }}
-Exec={{ lookup('pipe', 'which {{item.name}}') + ' ' + item.options | default() }}
+Exec={{ lookup('pipe', 'which {{ item.name }}') }} {{ item.options | default(None) }}
 Name={{ item.name }}
 Terminal=false
 Type=Application
