--- a/roles/keepassxc/templates/keepassxc.ini.j2
+++ b/roles/keepassxc/templates/keepassxc.ini.j2
@@ -9,9 +9,9 @@ BackupBeforeSave=false
 GlobalAutoTypeKey=0
 GlobalAutoTypeModifiers=0
 IgnoreGroupExpansion=true
-LastDatabases={{ mega.dest }}/{{ keepassxc.base }}
-LastDir={{ mega.dest }}
-LastOpenedDatabases={{ mega.dest }}/{{ keepassxc.base }}
+LastDatabases={{ data.path }}/{{ data.filename }}
+LastDir={{ data.path }}
+LastOpenedDatabases={{ data.path }}/{{ data.filename }}
 MinimizeOnCopy=false
 OpenPreviousDatabasesOnStartup=true
 RememberLastDatabases=true
