copyq: add new features & doublecmd: fix column sorting & keepassxc: turn on lock database idle

--- a/roles/keepassxc/templates/keepassxc.ini.j2
+++ b/roles/keepassxc/templates/keepassxc.ini.j2
@@ -5,6 +5,7 @@ AutoSaveOnExit=false
 AutoTypeDelay=25
 AutoTypeEntryTitleMatch=true
 AutoTypeEntryURLMatch=true
+AutoTypeStartDelay=200
 BackupBeforeSave=false
 GlobalAutoTypeKey=0
 GlobalAutoTypeModifiers=0
@@ -38,4 +39,6 @@ ShowTrayIcon=false
 SplitterState=181, 685
 
 [security]
+clearclipboard=true
 clearclipboardtimeout=5
+lockdatabaseidlesec=120
