update apps config

--- a/roles/keepassxc/templates/keepassxc.ini.j2
+++ b/roles/keepassxc/templates/keepassxc.ini.j2
@@ -40,5 +40,5 @@ SplitterState=181, 685
 
 [security]
 clearclipboard=true
-clearclipboardtimeout=5
-lockdatabaseidlesec=120
+clearclipboardtimeout=10
+lockdatabaseidlesec=240
