albert: fix output suggestion

--- a/roles/albert/templates/albert.conf.j2
+++ b/roles/albert/templates/albert.conf.j2
@@ -5,6 +5,7 @@ showTray=false
 
 [org.albert.extension.applications]
 enabled=true
+fuzzy=true
 
 [org.albert.extension.calculator]
 enabled=true
@@ -15,13 +16,14 @@ filters=inode/directory, application/*, image/*, video/*, audio/*
 follow_symlinks=true
 fuzzy=true
 indexhidden=true
+paths={{ user_home }}, {{ user_home }}/storage
 scan_interval=60
 
 [org.albert.extension.python]
 enabled=true
 
 [org.albert.extension.snippets]
-enabled=true
+enabled=false
 
 [org.albert.extension.system]
 enabled=true
