update rsnapshot conf

--- a/roles/rsnapshot/templates/rsnapshot.conf.j2
+++ b/roles/rsnapshot/templates/rsnapshot.conf.j2
@@ -11,9 +11,9 @@ lockfile	/tmp/rsnapshot.pid
 exclude	node_modules*
 link_dest	1
 backup	{{ user_home }}/storage/archive/	localhost/
-backup	{{ user_home }}/storage/audiobook/	localhost/
 backup	{{ user_home }}/storage/book/	localhost/
 backup	{{ user_home }}/storage/dev/	localhost/
 backup	{{ user_home }}/storage/gym/	localhost/
 backup	{{ user_home }}/storage/music/	localhost/
 backup	{{ user_home }}/storage/picture/	localhost/
+backup	{{ user_home }}/storage/privacy/	localhost/
