fix storage paths

--- a/roles/albert/templates/albert.conf.j2
+++ b/roles/albert/templates/albert.conf.j2
@@ -16,7 +16,7 @@ filters=inode/directory, application/*, image/*, video/*, audio/*
 follow_symlinks=true
 fuzzy=true
 indexhidden=true
-paths={{ user_home }}, {{ user_home }}/storage
+paths={{ user_home }}, {{ user_storage }}
 scan_interval=60
 
 [org.albert.extension.python]
