--- a/roles/rsnapshot/templates/rsnapshot.conf.j2
+++ b/roles/rsnapshot/templates/rsnapshot.conf.j2
@@ -10,10 +10,10 @@ loglevel	3
 lockfile	/tmp/rsnapshot.pid
 exclude	node_modules*
 link_dest	1
-backup	{{ user_home }}/storage/archive/	localhost/
-backup	{{ user_home }}/storage/book/	localhost/
-backup	{{ user_home }}/storage/dev/	localhost/
-backup	{{ user_home }}/storage/gym/	localhost/
-backup	{{ user_home }}/storage/music/	localhost/
-backup	{{ user_home }}/storage/picture/	localhost/
-backup	{{ user_home }}/storage/privacy/	localhost/
+backup	{{ user_storage }}/archive/	localhost/
+backup	{{ user_storage }}/book/	localhost/
+backup	{{ user_storage }}/dev/	localhost/
+backup	{{ user_storage }}/gym/	localhost/
+backup	{{ user_storage }}/music/	localhost/
+backup	{{ user_storage }}/picture/	localhost/
+backup	{{ user_storage }}/privacy/	localhost/
