--- a/roles/virtualbox/templates/VirtualBox.xml.j2
+++ b/roles/virtualbox/templates/VirtualBox.xml.j2
@@ -5,7 +5,7 @@
     <NetserviceRegistry>
     </NetserviceRegistry>
     <SystemProperties
-      defaultMachineFolder="{{ user_home }}storage/vms"
+      defaultMachineFolder="{{ user_storage }}/vms"
       defaultHardDiskFormat="VDI"
       VRDEAuthLibrary="VBoxAuth"
       webServiceAuthLibrary="VBoxAuth"
