change sync directory

--- a/roles/rsnapshot/templates/rsnapshot.conf.j2
+++ b/roles/rsnapshot/templates/rsnapshot.conf.j2
@@ -17,3 +17,4 @@ backup	{{ user_storage }}/gym/	localhost/
 backup	{{ user_storage }}/music/	localhost/
 backup	{{ user_storage }}/picture/	localhost/
 backup	{{ user_storage }}/privacy/	localhost/
+backup	{{ user_storage }}/sync/	localhost/
