--- a/roles/rsnapshot/templates/rsnapshot.conf.j2
+++ b/roles/rsnapshot/templates/rsnapshot.conf.j2
@@ -1,5 +1,5 @@
 config_version	1.2
-snapshot_root	{{ user_home }}/storage_ext/bcp/
+snapshot_root	{{ storage_ext }}/bcp/
 cmd_cp	/bin/cp
 cmd_rm	/bin/rm
 cmd_rsync	/usr/bin/rsync
