delete unnecessary symlink to storage device

--- a/roles/albert/templates/albert.conf.j2
+++ b/roles/albert/templates/albert.conf.j2
@@ -18,7 +18,7 @@ filters=inode/directory, application/*, image/*, video/*, audio/*, text/*
 follow_symlinks=true
 fuzzy=true
 indexhidden=true
-paths={{ user_home }}
+paths={{ user_home }}, {{ user_storage }}
 scan_interval=60
 
 [org.albert.extension.python]
