--- a/service/utility/templates/mimeapps.list.j2
+++ b/service/utility/templates/mimeapps.list.j2
@@ -1,7 +1,7 @@
 #jinja2:lstrip_blocks: True, trim_blocks: True
 
 {%- macro mimeapps() %}
-  {% for item in list %}
+  {% for item in data_inner %}
     {% for type in item.type %}
       {{- type }}={{ item.entry_name }}.desktop
     {% endfor %}
