albert: turn off telemetry

--- a/roles/albert/templates/albert.conf.j2
+++ b/roles/albert/templates/albert.conf.j2
@@ -2,6 +2,7 @@
 hotkey=Alt+Space
 incrementalSort=true
 showTray=false
+telemetry=false
 
 [org.albert.extension.applications]
 enabled=true
@@ -34,6 +35,6 @@ enabled=true
 enabled=true
 
 [org.albert.frontend.widgetboxmodel]
+clearOnHide=true
 itemCount=8
 theme=Numix
-clearOnHide=true
