--- a/service/helper/templates/startup.j2
+++ b/service/helper/templates/startup.j2
@@ -1,9 +1,9 @@
 [Desktop Entry]
-Comment={{ data.name }}
-Exec={{ lookup('pipe', 'which {{ data.name }}') }} {{ data.options | default(None) }}
-Name={{ data.name }}
+Comment={{ startup_list.name }}
+Exec={{ lookup('pipe', 'which {{ startup_list.name }}') }} {{ startup_list.options | default(None) }}
+Name={{ startup_list.name }}
 Terminal=false
 Type=Application
 Encoding=UTF-8
-X-GNOME-Autostart-Delay={{ data.delay | default(30) }}
+X-GNOME-Autostart-Delay={{ startup_list.delay | default(30) }}
 X-GNOME-Autostart-enabled=true
