replace the utility_link with a helper link & replace some link tasks to template tasks & update .gitignore

--- a/roles/mpv/templates/mpv.conf.j2
+++ b/roles/mpv/templates/mpv.conf.j2
@@ -7,7 +7,7 @@ stop-screensaver=yes
 sub-auto=all
 sub-font-size=35
 
-input-conf=~/.config/mpv/input.conf
+input-conf={{ user_config }}/mpv/input.conf
 
 # OSD
 
