--- a/roles/virtualbox/templates/VirtualBox.xml
+++ b/roles/virtualbox/templates/VirtualBox.xml
@@ -1,3 +1,4 @@
+<!-- {{ ansible_managed }} -->
 <?xml version="1.0"?>
 <VirtualBox xmlns="http://www.virtualbox.org/" version="1.12-linux">
   <Global>
