--- a/roles/firefox/templates/bookmarks.html
+++ b/roles/firefox/templates/bookmarks.html
@@ -1,3 +1,3 @@
 <!DOCTYPE NETSCAPE-Bookmark-file-1>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8" />
 <TITLE>Bookmarks</TITLE>
