--- a/roles/syncthing/templates/config.xml
+++ b/roles/syncthing/templates/config.xml
@@ -1,4 +1,32 @@
 <configuration version="29">
+  {% for item in data %}
+  <folder id="{{ item.path | to_uuid }}"
+    label="{{ item.path | basename }}"
+    path="{{ item.path }}"
+    type="sendreceive"
+    rescanIntervalS="3600"
+    fsWatcherEnabled="true"
+    fsWatcherDelayS="10"
+    ignorePerms="false"
+    autoNormalize="true">
+    <filesystemType>basic</filesystemType>
+    <minDiskFree unit="%">1</minDiskFree>
+    <copiers>0</copiers>
+    <pullerMaxPendingKiB>0</pullerMaxPendingKiB>
+    <hashers>0</hashers>
+    <order>random</order>
+    <ignoreDelete>false</ignoreDelete>
+    <scanProgressIntervalS>0</scanProgressIntervalS>
+    <pullerPauseS>0</pullerPauseS>
+    <maxConflicts>10</maxConflicts>
+    <disableSparseFiles>false</disableSparseFiles>
+    <disableTempIndexes>false</disableTempIndexes>
+    <paused>false</paused>
+    <weakHashThresholdPct>25</weakHashThresholdPct>
+    <markerName>.stfolder</markerName>
+    <copyOwnershipFromParent>false</copyOwnershipFromParent>
+  </folder>
+  {% endfor %}
   <gui enabled="true"
     tls="true"
     debugging="false">
@@ -6,7 +34,7 @@
   <options>
     <listenAddress>default</listenAddress>
     <globalAnnounceServer>default</globalAnnounceServer>
-    <globalAnnounceEnabled>true</globalAnnounceEnabled>
+    <globalAnnounceEnabled>false</globalAnnounceEnabled>
     <localAnnounceEnabled>true</localAnnounceEnabled>
     <localAnnouncePort>21027</localAnnouncePort>
     <localAnnounceMCAddr>[ff12::8384]:21027</localAnnounceMCAddr>
