--- a/roles/virtualbox/templates/VirtualBox.xml
+++ b/roles/virtualbox/templates/VirtualBox.xml
@@ -2,15 +2,15 @@
 <VirtualBox xmlns="http://www.virtualbox.org/"
   version="1.12-linux">
   <Global>
-    <MachineRegistry />
-    <NetserviceRegistry>
-    </NetserviceRegistry>
+    <ExtraData>
+      <ExtraDataItem name="GUI/Input/AutoCapture"
+        value="false" />
+    </ExtraData>
     <SystemProperties defaultMachineFolder="{{ user_storage }}/vms"
       defaultHardDiskFormat="VDI"
       VRDEAuthLibrary="VBoxAuth"
       webServiceAuthLibrary="VBoxAuth"
       LogHistoryCount="3"
       exclusiveHwVirt="true" />
-    <USBDeviceFilters />
   </Global>
 </VirtualBox>
