--- a/roles/doublecmd/templates/doublecmd.xml
+++ b/roles/doublecmd/templates/doublecmd.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<doublecmd DCVersion="0.8.2 beta"
-  ConfigVersion="10">
+<doublecmd>
   <Configuration Save="True"
     SortOrder="1">
     <UseConfigInProgramDir>False</UseConfigInProgramDir>
